@startuml Software_de_Loja_Parte1A_Controllers_Core
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Parte 1A: Apresentação (Controllers Core)

' ╔══════════════════════════════════════╗
' ║        CAMADA DE APRESENTAÇÃO        ║
' ║         (Controllers Core)           ║
' ╚══════════════════════════════════════╝
package "Apresentação (Controllers Core)" #EEF4FF {

  class AutenticacaoController {
    - autenticacaoServico : AutenticacaoServico
    + onLoginSubmit(evento : ActionEvent) : void
    + onLogout(evento : ActionEvent) : void
  }

  class VendaController {
    - vendaServico : VendaServico
    - caixaServico : CaixaServico
    + onLerCodigoBarras(codigo : String) : void
    + onFinalizarVenda(metodo : MetodoPagamento, valorEntregue : double) : void
    + onAnularVenda() : void
    + onAdicionarLinha(codigo : String, quantidade : int) : void
  }

  class DevolucaoController {
    - devolucaoServico : DevolucaoServico
    + onProcessarDevolucao(numeroFatura : String, codigoBarras : String, dataValidade : LocalDate, quantidade : int) : void
  }

  class CatalogoController {
    - catalogoServico : CatalogoServico
    + onCriarProduto(dados : ProdutoDTO) : void
    + onEditarProduto(id : int, dados : ProdutoDTO) : void
    + onDesativarProduto(id : int) : void
    + onAplicarDesconto(idLote : int, percentagem : double) : void
    + onConsultarAlertas() : void
  }

  class CaixaController {
    - caixaServico : CaixaServico
    + onAbrirSessao(fundo : List~DetalheNumerario~) : void
    + onRegistarSangria(valor : List~DetalheNumerario~) : void
    + onFecharSessao() : void
  }
}

' Relações com Serviços
AutenticacaoController ..> AutenticacaoServico
VendaController ..> VendaServico
VendaController ..> CaixaServico
DevolucaoController ..> DevolucaoServico
CatalogoController ..> CatalogoServico
CaixaController ..> CaixaServico

@enduml